--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
     "dotenv": "^17.2.2",
     "env": "^0.0.2",
     "node-fetch": "^3.3.2",
-    "node-zklib": "github:caobo171/node-zklib"
+    "node-zklib": "^1.3.0"
   }
 }
