--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zkteco-sync",
   "version": "1.0.0",
-  "type": "module",
+  "type": "commonjs",
   "main": "index.js",
   "dependencies": {
     "axios": "^1.11.0",
